keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    haproxy.org/timeout-client: "300s"
    haproxy.org/timeout-server: "300s"
    haproxy.org/timeout-connect: "5s"
    haproxy.org/buffer-size: "128k"
    haproxy.org/ssl-redirect: "false"
    haproxy.org/ssl-passthrough: "false"
    haproxy.org/forwarded-for: "true"
    haproxy.org/load-balance: "roundrobin"
spec:
  ingressClassName: haproxy
  rules:
  - host: auth-keycloak.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080
